# voxforge-ai-review-analytics

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  railway.toml  requirements.txt
api/: index.py
backend/app/: __init__.py  config.py  main.py  repository.py  routes.py  schemas.py  services.py
backend/data/: dashboard.json  recommendations.json  report.json  report.md  topics.json
docs/: PHASE_1_TO_PHASE_2.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
frontend/src/: App.tsx  index.css
models/sentiment/: tfidf_logistic_regression.joblib
notebooks/: 01_data_ingestion.ipynb  01_data_profiling_eda.ipynb  02_data_cleaning_preprocessing.ipynb  02_data_profiling.ipynb  02_data_profiling_eda.ipynb  03_data_cleaning.ipynb
notebooks/clustering/: 07_tfidf_kmeans_topics.ipynb
notebooks/sentiments/: 03_tfidf_logistic_regression.ipynb  04_distilbert_sentiment.ipynb  05_deberta_v3_lora_sentiment.ipynb  06_sentiment_model_selection_and_inference.ipynb
results/: model_tracking.csv
results/classification_reports/: tfidf_logistic_regression.csv
results/clustering/: cluster_count_evaluation.csv  cluster_sizes.csv  representative_reviews.csv  svd_coordinates.csv  top_terms.csv  topic_sentiment_summary.csv
results/confusion_matrices/: tfidf_logistic_regression.csv
results/predictions/: tfidf_logistic_validation.csv
src/: config.py  model_io.py  tracker.py
src/clustering/: labeling.py  tfidf_kmeans.py
src/data/: clean.py  config.py  load.py  (+4 more)
(+49 files in other folders)
